# lxqt-panel

./: .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  remote_test.sh
menu/: lxqt-applications.menu
menu/desktop-directories/: px-about.directory.in
menu/translations/: lxqt-settings_ru.directory  px-about.directory
panel/resources/: panel.conf
plugin-desktopswitch/translations/: desktopswitch_sr_RS.ts
plugin-mainmenu/: CMakeLists.txt  MenuTitle.h  ResultItem.h  actionview.cpp  actionview.h  lxqtmainmenu.cpp  lxqtmainmenu.h  pxsettings.h  recoll.vixie
plugin-mainmenu/translations/: mainmenu_cs.ts  mainmenu_sr_RS.ts
plugin-mount/translations/: mount_cs.ts  mount_es.ts  mount_sk_SK.ts  mount_sr_RS.ts
plugin-px-hub/: Account.cpp  Account.h  AccountItem.h  AccountObject.h  CMakeLists.txt  CalendarBox.h  CalendarItemWidget.h  EventObject.h  Hub.cpp  Hub.h  HubItem.h  LineSeperator.h  MenuManager.cpp  MenuManager.h  MessageObject.h  Settings.h  ShareObjects.cpp  ShareObjects.h  TimeBoxObject.h  hub.cpp  hub.desktop.in  hub.h  notes.cpp  notes.h  resources.qrc
plugin-px-hub/interfaces/: event.capnp.c++  event.capnp.h  hub.capnp  hub.capnp.c++  hub.capnp.h
plugin-px-hub/resources/: hub.desktop.in  notes.desktop.in
plugin-px-hub/rpc/: EventHandler.h  EventSubscriber.cpp  EventSubscriber.h  RPCHubClient.cpp  RPCHubClient.h  ServiceEventHandler.cpp  ServiceEventHandler.h  Utils.cpp  Utils.h
plugin-px-hub/translations/: hub_ar.ts  hub_de.ts  hub_fa.ts
plugin-px-menu/: CMakeLists.txt  Settings.h  menu.cpp  menu.h  resources.qrc
plugin-px-menu/resources/: menu.desktop.in
plugin-px-system/: CMakeLists.txt  CheckUpdate.cpp  CheckUpdate.h  NetworkInformation.h  NetworkInspection.cpp  NetworkInspection.h  PxIcon.h  Settings.h  resources.qrc  system.cpp  system.h
plugin-px-system/resources/: SYSTEMMenu.qml  system.desktop.in
plugin-px-system/translations/: hub.ts  hub_de.ts
plugin-quicklaunch/: quicklaunchaction.h
plugin-taskbar/translations/: taskbar_sk_SK.ts
plugin-volume/translations/: volume_cs.ts
